--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
   </header>
 
   <!-- Sliders (uno por sección, se muestran según el hash) -->
-  <div id="slider-home" class="slider visible">
-    <div class="slide active" style="background-image: url('img/imagenprueba1.png');"></div>
-    <div class="slide" style="background-image: url('img/imagenprueba2.png');"></div>
-  </div>
-    <div class="slide" style="background-image: url('https://via.placeholder.com/1200x800?text=Imagen+3');"></div>
-  </div>
+ <div id="slider-home" class="slider visible">
+  <div class="slide active" style="background-image: url('Img/imagenprueba1.png');"></div>
+  <div class="slide" style="background-image: url('Img/imagenprueba2.png');"></div>
+  <div class="slide" style="background-image: url('https://via.placeholder.com/1200x800?text=Imagen+3');"></div>
+</div>
 
   <div id="slider-team" class="slider">
     <div class="slide active" style="background-image: url('team1.png');"></div>
