--- a/index.html
+++ b/index.html
@@ -89,36 +89,34 @@
   </section>
 
   <section id="catalogos" class="section">
-    <div class="content">
-     <div class="catalogos-container">
+  <div class="content">
+    <div class="catalogos-container">
       <aside class="catalogos-menu">
         <ul>
-          <li><a href="pdfs/sillas.pdf" target="_blank">Sillas</a></li>
-          <li><a href="pdfs/bancos.pdf" target="_blank">Bancos</a></li>
-          <li><a href="pdfs/mesas.pdf" target="_blank">Mesas</a></li>
-          <li><a href="pdfs/banquetas.pdf" target="_blank">Banquetas</a></li>
-          <li><a href="pdfs/sillones.pdf" target="_blank">Sillones</a></li>
-          <li><a href="pdfs/espejos.pdf" target="_blank">Espejos</a></li>
-          <li><a href="pdfs/sofas.pdf" target="_blank">Sofás</a></li>
-          <li><a href="pdfs/camas.pdf" target="_blank">Camas</a></li>
-          <li><a href="pdfs/alfombras.pdf" target="_blank">Alfombras</a></li>
+          <li><a href="ALFOMBRAS.pdf" target="_blank">Alfombras</a></li>
+          <li><a href="BANCOS.pdf" target="_blank">Bancos</a></li>
+          <li><a href="BANQUETAS.pdf" target="_blank">Banquetas</a></li>
+          <li><a href="CAMAS.pdf" target="_blank">Camas</a></li>
+          <li><a href="ESPEJOS.pdf" target="_blank">Espejos</a></li>
+          <li><a href="SILLAS.pdf" target="_blank">Sillas</a></li>
+          <li><a href="SILLONES.pdf" target="_blank">Sillones</a></li>
+          <li><a href="SOFAS.pdf" target="_blank">Sofás</a></li>
         </ul>
       </aside>
 
       <div class="catalogos-grid">
-        <div class="catalog-item"><a href="pdfs/sillas.pdf" target="_blank"><img src="catalogos/sillas.jpg" alt="Sillas"><span>Sillas</span></a></div>
-        <div class="catalog-item"><a href="pdfs/bancos.pdf" target="_blank"><img src="catalogos/bancos.jpg" alt="Bancos"><span>Bancos</span></a></div>
-        <div class="catalog-item"><a href="pdfs/mesas.pdf" target="_blank"><img src="catalogos/mesas.jpg" alt="Mesas"><span>Mesas</span></a></div>
-        <div class="catalog-item"><a href="pdfs/banquetas.pdf" target="_blank"><img src="catalogos/banquetas.jpg" alt="Banquetas"><span>Banquetas</span></a></div>
-        <div class="catalog-item"><a href="pdfs/sillones.pdf" target="_blank"><img src="catalogos/sillones.jpg" alt="Sillones"><span>Sillones</span></a></div>
-        <div class="catalog-item"><a href="pdfs/espejos.pdf" target="_blank"><img src="catalogos/espejos.jpg" alt="Espejos"><span>Espejos</span></a></div>
-        <div class="catalog-item"><a href="pdfs/sofas.pdf" target="_blank"><img src="catalogos/sofas.jpg" alt="Sofás"><span>Sofás</span></a></div>
-        <div class="catalog-item"><a href="pdfs/camas.pdf" target="_blank"><img src="catalogos/camas.jpg" alt="Camas"><span>Camas</span></a></div>
-        <div class="catalog-item"><a href="pdfs/alfombras.pdf" target="_blank"><img src="catalogos/alfombras.jpg" alt="Alfombras"><span>Alfombras</span></a></div>
+        <div class="catalog-item"><a href="ALFOMBRAS.pdf" target="_blank"><img src="catalogos/alfombras.jpg" alt="Alfombras"><span>Alfombras</span></a></div>
+        <div class="catalog-item"><a href="BANCOS.pdf" target="_blank"><img src="catalogos/bancos.jpg" alt="Bancos"><span>Bancos</span></a></div>
+        <div class="catalog-item"><a href="BANQUETAS.pdf" target="_blank"><img src="catalogos/banquetas.jpg" alt="Banquetas"><span>Banquetas</span></a></div>
+        <div class="catalog-item"><a href="CAMAS.pdf" target="_blank"><img src="catalogos/camas.jpg" alt="Camas"><span>Camas</span></a></div>
+        <div class="catalog-item"><a href="ESPEJOS.pdf" target="_blank"><img src="catalogos/espejos.jpg" alt="Espejos"><span>Espejos</span></a></div>
+        <div class="catalog-item"><a href="SILLAS.pdf" target="_blank"><img src="catalogos/sillas.jpg" alt="Sillas"><span>Sillas</span></a></div>
+        <div class="catalog-item"><a href="SILLONES.pdf" target="_blank"><img src="catalogos/sillones.jpg" alt="Sillones"><span>Sillones</span></a></div>
+        <div class="catalog-item"><a href="SOFAS.pdf" target="_blank"><img src="catalogos/sofas.jpg" alt="Sofás"><span>Sofás</span></a></div>
       </div>
     </div>
-    </div>
-  </section>
+  </div>
+</section>
 
   <section id="fabbrica" class="section">
     <div class="content">
@@ -151,4 +149,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
